create crud products and modification vertion of go in the dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     env_file:
       - .env
     volumes:
-      - ./media:/root/media
+      - ./media:/app/media
     networks:
       - backend
 
