--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
             cd /home/ubuntu/Inventori_ecommerce && \
-            git pull origin main && \
+            git pull origin dev && \
             docker-compose down && \
             docker-compose up -d --build
           "
