--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,9 @@ jobs:
       - name: Deploy to Staging
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.STAGING_USER }}@${{ secrets.STAGING_HOST }} "
-            cd /home/ubuntu/Inventori_ecommerce
+            cd /home/ubuntu/Inventori_ecommerce && \
+            git pull origin main && \
+            docker-compose -f docker-compose.dev.yml down && \
             docker-compose -f docker-compose.dev.yml up -d --build
           "
 
