--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Wait for Approval
         uses: trstringer/manual-approval@v1
         with:
-          secret: ${{ github.token }}
+          secret: ${{ secrets.APPROVAL_TOKEN }}
           approvers: "Juan-Barraza"
           prompt: "✅ Staging deployment complete. Approve production deployment?"
 
@@ -83,10 +83,12 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.PROD_SSH_KEY }}
+          known_hosts: ${{ secrets.PROD_KNOWN_HOSTS }}
+
       - name: Execute Rollback
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.PROD_USER }}@${{ secrets.PROD_HOST }} "
-            cd /home/ubuntu/Inventori_ecommerce
-            chmod +x scripts/rollback.sh
+            cd /home/ubuntu/Inventori_ecommerce && \
+            chmod +x scripts/rollback.sh && \
             ./scripts/rollback.sh
           "
