--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Staging and Production
+name: CI/CD with Rollback
 
 on:
   push:
@@ -6,18 +6,18 @@ on:
   workflow_dispatch: # Permite ejecución manual
 
 jobs:
-  test: # Permite los test que esten disponibles
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.23.6" 
+          go-version: "1.21" # Usa tu versión de Go
       - name: Run Tests
         run: |
           go test -v ./...
-          go mod tidy
+          go mod tidy # Asegura dependencias actualizadas
 
   deploy-staging:
     needs: test
@@ -25,16 +25,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install SSH Key
-        uses: webfactory/ssh-agent@v0.7.0  # Mejor acción para manejo de claves
+        uses: shimataro/ssh-key-action@v2
         with:
-          ssh-private-key: ${{ secrets.STAGING_SSH_PRIVATE_KEY }}
-      - name: Add to known hosts
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.STAGING_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
+          key: ${{ secrets.STAGING_SSH_KEY }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
       - name: Deploy to Staging
         run: |
-          ssh -vvv -o StrictHostKeyChecking=no ${{ secrets.STAGING_USER }}@${{ secrets.STAGING_HOST }} "
+          ssh -o StrictHostKeyChecking=no ${{ secrets.STAGING_USER }}@${{ secrets.STAGING_HOST }} "
             cd /home/${{ secrets.STAGING_USER }}/Inventori_ecommerce && \
             git fetch origin main && \
             git reset --hard origin/main && \
@@ -55,30 +52,20 @@ jobs:
 
   deploy-production:
     needs: approve-production
-    if: success() 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Install SSH Key
-        uses: webfactory/ssh-agent@v0.7.0
+        uses: shimataro/ssh-key-action@v2
         with:
-          ssh-private-key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-      - name: Add to known hosts
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.PROD_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
+          key: ${{ secrets.PROD_SSH_KEY }}
+          known_hosts: ${{ secrets.PROD_KNOWN_HOSTS }}
       - name: Deploy to production
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.PROD_USER }}@${{ secrets.PROD_HOST }} "
-            cd /home/${{ secrets.PROD_USER }}/Inventori_ecommerce && \
+          cd /home/${{ secrets.PROD_USER }}/Inventori_ecommerce && \
             git fetch origin main && \
             git reset --hard origin/main && \
             docker-compose -f docker-compose.prod.yml down && \
             docker-compose -f docker-compose.prod.yml up -d --build
-          "
-      - name: Verify deployment
-        run: |
-          ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_HOST }} "
-            docker ps && \
-            curl -sSf http://localhost:8080/healthcheck || exit 1
           "
